# warmor

./: .gitattributes  .gitignore  .golangci.yml  .vimto.toml  BUILD.md  GETTING_STARTED.md  LICENSE  Makefile  QUICKSTART.md  QUICK_REFERENCE.md  README.md  go.mod  go.sum
bpf/: Makefile  connect_monitor.bpf.c  execve_monitor.bpf.c  lsm_bind.bpf.c  lsm_connect.bpf.c  lsm_exec.bpf.c  lsm_file.bpf.c  lsm_listen.bpf.c  lsm_mount.bpf.c  lsm_ptrace.bpf.c  openat_monitor.bpf.c  tracepoint_defs.h  vmlinux_minimal.h  warmor_lsm.h
bpf-windows/: Makefile  file_monitor.bpf.c  network_monitor.bpf.c  process_monitor.bpf.c
deploy/: Dockerfile  docker-compose.monitoring.yml  docker-compose.yaml  prometheus.yml
docs/: BPF_COMPATIBILITY.md  BUILD_TAGS.md  CROSS_PLATFORM_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_ROADMAP.md  MACOS_FULL_IMPLEMENTATION.md  OVERVIEW.md  PHASE1_STATUS.md  PHASE2_COMPLETE.md  PHASE2_ROADMAP.md  PHASE3_COMPLETE.md  PHASE3_ROADMAP.md  PHASE4_ROADMAP.md  PHASE5_PHASE6_COMPLETE.md  PHASE5_PROGRESS.md  PHASE5_ROADMAP.md  PLATFORM_LINUX.md  PLATFORM_MACOS.md  PLATFORM_WINDOWS.md  PRD.md  PROJECT_COMPLETE.md  ROADMAP.md  SECURITY_POSTURE.md  TEST_SUMMARY.md  WINDOWS_FULL_IMPLEMENTATION.md  architecture.md  attack-graph.md  blast-radius.md  canary-rollout.md  crd-usage.md  drift-detection.md  escape-detection.md  learning-mode.md  phase4-completion-summary.md  phase7-advanced-features.md  (+12 more)
policies/cross-platform/: Cargo.toml  README.md
policies/cross-platform/src/: lib.rs
policies/example/: Cargo.toml  Makefile
policies/example/src/: lib.rs
(+344 files in other folders)
